# OpenClaw-env-manager

./: .coverage-summary.md  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
.githooks/: pre-push
.github/scripts/: build_coverage_site.py  create_release_tag.py  deploy_github_pages.py  verify_release_tag.py
.github/workflows/: ci.yml  publish-pypi.yml
docs/: concepts.md  getting-started.md  hooks.py  openclawenv-toml.md
docs/api/: index.md  manifests.md
src/clawopenenv/: __init__.py  __main__.py
src/openenv/: __init__.py  cli.py
src/openenv/bots/: manager.py
src/openenv/core/: __init__.py  errors.py  models.py  skills.py  utils.py
src/openenv/docker/: builder.py  compose.py  dockerfile.py
src/openenv/integrations/: openrouter.py  scanner.py
src/openenv/manifests/: lockfile.py
src/openenv/templates/: sample.py
tests/bots/: test_manager.py
tests/cli/: test_cli.py  test_main_module.py
tests/docker/: test_builder.py  test_compose.py  test_dockerfile.py
tests/fixtures/: example.Dockerfile  example.bot.env  example.compose.yml  example.openclawenv.toml
tests/integrations/: test_deploy_github_pages.py  test_scanner.py
tests/manifests/: test_loader.py  test_lockfile.py
