[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenClaw-env-manager"
version = "1.1.2"
description = "OpenClaw-env-manager: declarative Dockerized environments for OpenClaw agents"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Codex" }]
dependencies = ["loguru>=0.7,<1.0"]
keywords = ["agents", "docker", "openclaw", "openclawenv"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/fipciu1996/OpenClaw-env-manager"
Repository = "https://github.com/fipciu1996/OpenClaw-env-manager"
Issues = "https://github.com/fipciu1996/OpenClaw-env-manager/issues"

[project.scripts]
clawopenenv = "openenv.cli:main"

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6,<8.0",
  "changelog-cli>=0.7.1,<0.8.0",
]
docs = [
  "mkdocs>=1.6,<2.0",
  "mkdocstrings[python]>=0.18,<1.0",
  "mkdocs-include-markdown-plugin>=7.2,<8.0",
]
scan = ["cisco-ai-skill-scanner"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
relative_files = true
source = ["openenv"]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "if __name__ == .__main__.:",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
title = "OpenClaw-env-manager Coverage"
